hphp/hack/test/typecheck/toplevel_requires/extends.php.like_types.exp
File "extends.php", line 7, characters 7-9:
Foo has a non-<?hh grandparent; this is not allowed in strict mode because that parent may define methods of unknowable name and type (Typing[4123])
File "extends.php", line 7, characters 19-21:
Unbound name: Bar (an object type) (Naming[2049])
